--- a/webview-ui/src/App.css
+++ b/webview-ui/src/App.css
@@ -4,6 +4,7 @@ main {
   justify-content: center;
   align-items: flex-start;
   height: 100%;
+  padding: 20px;
 }
 
 main > * {
@@ -11,7 +12,21 @@ main > * {
 }
 
 .editor {
-  border: 1px solid orange;
+  border: 1px solid grey;
   padding: 5px;
   border-radius: 8px;
+  display: flex;
+}
+
+.panel{
+  width: 25vw;
+  height: calc(100vh - 250px);
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.addBtn{
+  width: 50px;
 }
