--- a/webview-ui/src/App.css
+++ b/webview-ui/src/App.css
@@ -1,30 +1,13 @@
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  height: 100%;
-  padding: 20px;
-}
-
-main > * {
-  margin: 1rem 0;
-}
-
-.editor {
-  border: 1px solid grey;
-  padding: 5px;
-  border-radius: 8px;
-  display: flex;
-}
-
-.panel{
-  width: 25vw;
-  height: calc(100vh - 250px);
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    padding: 10px;
+    height: calc(100vh - 100px);
+    width: calc(100vw - 100px);
+    border: 1px solid grey;
+    border-radius: 8px;
+    display: flex;
+    margin: 10px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .addBtn{
